[gd_scene load_steps=17 format=3 uid="uid://klk1ayamayco"]

[ext_resource type="Texture2D" uid="uid://ct1fmtjagaklq" path="res://art/objects/bed/bed.png" id="1_b3uju"]
[ext_resource type="Shader" path="res://scripts/shaders/sprite_outline.gdshader" id="2_mc3uq"]
[ext_resource type="Script" path="res://scripts/sprite_outline.gd" id="3_7xc4t"]
[ext_resource type="Texture2D" uid="uid://b2wnfqcia5fbc" path="res://art/objects/bed/bedsheet.png" id="3_b6bgl"]
[ext_resource type="Script" path="res://scripts/bedsheet_sprite.gd" id="5_iv2rh"]
[ext_resource type="Shortcut" uid="uid://bo3c8ebj6unxp" path="res://systems/shortcuts/interact.tres" id="6_t2815"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e5o1o"]
shader = ExtResource("2_mc3uq")
shader_parameter/width = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = null
shader_parameter/minimal_flickering_alpha = 0.9
shader_parameter/brightness = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nruai"]
shader = ExtResource("2_mc3uq")
shader_parameter/width = null
shader_parameter/outline_color = null
shader_parameter/flickering_speed = null
shader_parameter/minimal_flickering_alpha = null
shader_parameter/brightness = -2.2352e-08

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2gliy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lf7cx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4k6g7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7wpda"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uyj3l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4jlai"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7vs8"]
size = Vector2(16, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdaqp"]
size = Vector2(16, 32)

[node name="Bed" type="StaticBody2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_e5o1o")
position = Vector2(-9, -18)
texture = ExtResource("1_b3uju")
centered = false
script = ExtResource("3_7xc4t")

[node name="Bedsheet" type="Sprite2D" parent="Sprite"]
show_behind_parent = true
z_index = 3
z_as_relative = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_nruai")
position = Vector2(9, 20)
texture = ExtResource("3_b6bgl")
script = ExtResource("5_iv2rh")

[node name="PopupButton" type="Button" parent="Sprite"]
z_index = 8
z_as_relative = false
offset_left = 1.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = 33.0
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_2gliy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lf7cx")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4k6g7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7wpda")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uyj3l")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4jlai")
disabled = true
shortcut = ExtResource("6_t2815")
shortcut_feedback = false
shortcut_in_tooltip = false
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_w7vs8")

[node name="PlayerChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChecker"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_hdaqp")

[connection signal="button_down" from="Sprite/PopupButton" to="Sprite" method="_on_popup_button_button_down"]
[connection signal="button_down" from="Sprite/PopupButton" to="Sprite/Bedsheet" method="_on_popup_button_button_down"]
[connection signal="button_up" from="Sprite/PopupButton" to="Sprite" method="_on_popup_button_button_up"]
[connection signal="button_up" from="Sprite/PopupButton" to="Sprite/Bedsheet" method="_on_popup_button_button_up"]
[connection signal="mouse_entered" from="Sprite/PopupButton" to="Sprite" method="_on_popup_button_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/PopupButton" to="Sprite" method="_on_popup_button_mouse_exited"]
[connection signal="pressed" from="Sprite/PopupButton" to="Sprite" method="_on_popup_button_pressed"]
[connection signal="area_entered" from="PlayerChecker" to="Sprite" method="_on_player_checker_area_entered"]
[connection signal="area_entered" from="PlayerChecker" to="Sprite/Bedsheet" method="_on_player_checker_area_entered"]
[connection signal="area_exited" from="PlayerChecker" to="Sprite" method="_on_player_checker_area_exited"]
[connection signal="area_exited" from="PlayerChecker" to="Sprite/Bedsheet" method="_on_player_checker_area_exited"]
